solving svg overlapping, elements duplications //  module issue+removing json aux data in progress

--- a/test/css/style.css
+++ b/test/css/style.css
@@ -1,5 +1,5 @@
 svg {
-  /*border: 1px solid #E8E8E8     ;*/
+  border: 1px solid #E8E8E8     ;
   overflow: hidden;
 }
 
